Fix formatting and add points of experience!

--- a/resume.tex
+++ b/resume.tex
@@ -106,7 +106,8 @@
 
 \input{sections/experience.tex}
 \input{sections/education.tex}
-\input{sections/competencies.tex}
+\vfill
+\input{sections/skills.tex}
 \input{sections/projects.tex}
 \input{sections/publications.tex}
 \input{sections/honors.tex}
