--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -1,5 +1,6 @@
 \cvsection{Experience}
 %\cvsubsection{Professional}
+\vspace{-2.0mm}
 \begin{cventries}
   \cventry
     {SAP SE}
@@ -8,10 +9,12 @@
     {01/2023 -- Present}
     {
       \begin{cvitems}
-        \item {TODO: Mergedog}
-        \item {Introduced a Rust-based tool monitoring compile times to improve developer experience and reduce costs}
+        %\item {TODO: Mergedog}
+        \item {Reduced compile times by 10\%. Developed continuous monitoring to improve developer experience and reduce costs}
         \item {Part of an internal group to manage department-wide quality standards}
         %\item {Organized monthly newsletter to spread knowledge of modern/new C++ language and library features}
+        %\item {Maintainer of CompileTimeExplorer an interactive tool to browse compile times of HANA by component, file, function and template}
+        \item {Maintainer of CodeExplorer, a web application to interactively browse source code with compiler generated cross links and statistics}
         \item {\textbf{Technologies:} \textit{C++17/20/23, Rust, Python, Google Test/Benchmark Framework, CMake, Docker}}
       \end{cvitems}
     }
@@ -22,8 +25,7 @@
     {01/2021 -- 12/2022}
     {
       \begin{cvitems}
-        %\item {Maintainer of CodeExplorer an interactive tool to browse HANA source code with compiler based cross links}
-        \item {Developed new optimization to improve performance at scale for very large table partitions of \ billion rows}
+        \item {Optimized data structures for performance at scale (for very large table partitions of \textasciitilde 2 billion rows)}
         \item {Drove large refactoring efforts reducing code complexity and increase development velocity}
         \item {\textbf{Technologies:} \textit{C++17/20, Python, Google Test/Benchmark Framework, CMake, Docker}}
       \end{cvitems}
@@ -68,26 +70,10 @@
         \item {Research project: ``Feature Extraction from Time-Dependent and Uncertain Vector Fields"}
         \item {Developed and implemented high-performance visualization algorithms for chaotic dynamical systems}
         %\item {Pushed test-driven-development to provide reference implementations and benchmarks for widely used algorithms}
-        %\item {``Computer Graphics`` (Winter 2016), ``Databases`` (Summer 2019)}
-        % \item Gained extensive public speaking experience by preparing and holding weekly tutorial sessions for students
-        % \item Graded weekly assignments and final exams
-        %\item {Created assignments and final exams for lecture assistant positions}
         %\item {Established regular code reviews and more detailed git usage for student projects}
         \item {\textbf{Technologies:} \textit{C++14/17, Python, Eigen, CMake, CUDA, OpenMP, VTK}}
       \end{cvitems}
     }
-  % \cventry
-    % {Part-time Software Engineer}
-    % {Tut-All Software GmbH}
-    % {Karlsruhe, DE}
-    % {07/2014 -- 01/2015}
-    % {
-    %   \begin{cvitems}
-    %     %\item {Ported native software from Windows to Unix-based systems, involving system-level hooks on the X Window System}
-    %   % \item {Assisted with training of SVM-based OCR system for screen capturing to guide users in live tutorial sessions}
-    %     \item {Technologies: Java, Unix Kernel, X11}
-    %   \end{cvitems}
-    % }
     \cventry
     {Institute of Computer Science}
     {Student Research Assistant}
