--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -1,4 +1,5 @@
 \cvsection{Personal Projects}
+\vspace*{-5.0mm}
 \begin{cventries}
   \cventry
     {Automated web-based visualization tool to track compilation times of (large) C++ projects}
