--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -1,6 +1,6 @@
 \cvsection{Skills}
 \begin{minipage}[t]{.35\linewidth}
-{\vspace*{-0.45cm}\cvsubsection{Programming Languages }}
+{\cvsubsection{Programming Languages }}
 \vspace*{0.45cm}
 \descriptionstyle{
      \begin{cvitems}
@@ -19,7 +19,7 @@
 }
 \end{minipage}%
 \begin{minipage}[t]{.35\linewidth}
-{\vspace*{-0.45cm}\cvsubsection{Tools \& Frameworks}}
+{\cvsubsection{Tools \& Frameworks}}
 \vspace*{0.45cm}
 \descriptionstyle{
       \begin{cvitems}
@@ -36,7 +36,7 @@
 }
 \end{minipage}%
 \begin{minipage}[t]{0.3\linewidth}
-{\vspace*{-0.45cm}\cvsubsection{Languages}}
+{\cvsubsection{Languages}}
 \vspace*{0.45cm}
 \descriptionstyle{
       \begin{cvitems}
@@ -54,4 +54,5 @@
 \mybox {Teamwork}\hfill
 \mybox {Effective Communication}
 }
+\vspace*{0.5cm}
 \end{minipage}
