--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -10,8 +10,8 @@
     {
       \begin{cvitems}
         %\item {TODO: Mergedog}
-        \item {Reduced compile times by 10\%. Developed continuous monitoring to improve developer experience and reduce costs}
-        \item {Part of an internal group to manage department-wide quality standards}
+        \item {Reduced compile times of a multi-million lines-of-code product by 10\% and developed continuous monitoring to improve developer experience}
+        \item {Member of an internal group to manage department-wide quality standards}
         %\item {Organized monthly newsletter to spread knowledge of modern/new C++ language and library features}
         %\item {Maintainer of CompileTimeExplorer an interactive tool to browse compile times of HANA by component, file, function and template}
         \item {Maintainer of CodeExplorer, a web application to interactively browse source code with compiler generated cross links and statistics}
